@@ -19,6 +19,21 @@
         </developer>
     </developers>
     
+    <repositories>
+        <repository>
+            <id>payara-patched-externals</id>
+            <name>Payara Patched Externals</name>
+            <url>https://raw.github.com/payara/Payara_PatchedProjects/master</url>
+            <!--<url>file:///opt/PayaraDev/Payara_PatchedProjects</url>-->
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+    
     <modules>
         <module>sweranker-persistence</module>
         <module>sweranker-data-access</module>
@@ -46,36 +61,41 @@
         </profile>
     </profiles>
     
+    <prerequisites>
+        <maven>3.6.1</maven>
+    </prerequisites>
+    
     <properties>
         <!--  General properties -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         
         <!--JAVA version -->
-        <java-version>1.8</java-version>
+        <java-version>11</java-version>
         
         <!-- Maven plugin versions -->
         <ejb-plugin-version>3.0.1</ejb-plugin-version>
-        <war-plugin-version>3.2.2</war-plugin-version>
+        <war-plugin-version>3.2.3</war-plugin-version>
         <ear-plugin-version>3.0.1</ear-plugin-version>
         <clean-plugin-version>3.1.0</clean-plugin-version>
-        <compiler-plugin-version>3.8.0</compiler-plugin-version>
+        <compiler-plugin-version>3.8.1</compiler-plugin-version>
         <deploy-plugin-version>3.0.0-M1</deploy-plugin-version>
         <install-plugin-version>3.0.0-M1</install-plugin-version>
         <resources-plugin-version>3.1.0</resources-plugin-version>
-        <surefire-plugin-version>3.0.0-M1</surefire-plugin-version>
-        <surefire-reporting-plugin-version>3.0.0-M1</surefire-reporting-plugin-version>
+        <surefire-plugin-version>3.0.0-M3</surefire-plugin-version>
+        <surefire-reporting-plugin-version>3.0.0-M3</surefire-reporting-plugin-version>
         <failsafe-plugin-version>3.0.0-M3</failsafe-plugin-version>
+        <jar-plugin-version>3.1.2</jar-plugin-version>
         <versions-plugin-version>2.7</versions-plugin-version>
         
         <!-- JAVA EE API, SPEC and IMPLEMENTATION versions -->
         <javaee-api-version>8.0</javaee-api-version>
         <javaee-ws-rs-version>2.1</javaee-ws-rs-version>
         <jpa-spec-version>2.2.0</jpa-spec-version>
-        <eclipse-link-version>2.7.4</eclipse-link-version>
+        <eclipse-link-version>2.7.4.payara-p2</eclipse-link-version>
         <ejb-spec-version>3.2</ejb-spec-version>
         <jersey-version>2.27</jersey-version>
         <jaxrs-jackson-version>2.9.7</jaxrs-jackson-version>
-        <weld-osgi-version>3.0.0.Final</weld-osgi-version>
+        <weld-osgi-version>3.1.0.Final</weld-osgi-version>
         <javax-mail-version>1.6.2</javax-mail-version>
         
         
@@ -100,8 +120,7 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${compiler-plugin-version}</version>
                     <configuration>
-                        <target>${java-version}</target>
-                        <source>${java-version}</source>
+                        <release>${java-version}</release>
                         <encoding>${project.build.sourceEncoding}</encoding>
                     </configuration>
                 </plugin>
@@ -176,6 +195,9 @@
                         <reportsDirectory>${basedir}/../ffbuild/reports</reportsDirectory>
                         <groups>${groups}</groups>
                         <skipTests>${skipTests}</skipTests>
+                        <argLine>
+                            --illegal-access=permit
+                        </argLine>
                     </configuration>
                 </plugin>
                 
@@ -184,6 +206,11 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-failsafe-plugin</artifactId>
                     <version>${failsafe-plugin-version}</version>
+                    <configuration>
+                        <argLine>
+                            --illegal-access=permit
+                        </argLine>
+                    </configuration>
                 </plugin>
                 
                 <!-- This plugin is useful to check newer versions of dependencies or plugins, please check the goals here "https://www.mojohaus.org/versions-maven-plugin/plugin-info.html" -->
